app1/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-vs
  namespace: istio-system
spec:
  hosts:
  - \"*\"
  gateways:
  - app1-gateway
  http:
  - route:
    - destination:
        host: app1.default.svc.cluster.local
        port:
          number: 80
